--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@liripeng/vue-audio-player": "^1.5.0",
     "sass": "^1.54.8",
     "vue": "^3.2.37",
+    "vue-pdf-embed": "^1.1.5",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
